# 12id-bl4ai-control

./: README.md  calibration.npz  locate.py  main.py  pick.py  pyproject.toml  tf.py  ur_robot.py
