[project]
name = "12id-bl4ai-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.1",
    "ophyd>=1.11.2",
    "pyepics>=3.5.10",
    "robotiq-tools",
    "scipy>=1.18.0",
]

[tool.ty.environment]
python = "./.venv"

[tool.uv.sources]
robotiq-tools = { path = "../robotiq-tools" }
